# debug-adapter-client

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: python-app.yml
dap/: __init__.py  client.py  events.py  io_handler.py  protocol.py  requests.py  types.py
sandbox/: dap_io.py  sample_script_to_load.py  sandbox.py  simple_dap_adapter.py
tests/: test_client.py  test_io.py
