[tool.poetry]
name = "dap-python"
version = "1.0.0"
description = "Client for Debug Adapter Protocol"
authors = ["Billy <billydevbusiness@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
