[tool.poetry]
name = "dap-python"
version = "1.0.0"
description = "Client for Debug Adapter Protocol"
authors = ["Billy <billydevbusiness@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.12.5"
debugpy = "^1.8.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
